[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "HTTP server for mq scripts"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query", "http"]
license = "MIT"
name = "mq-http"
readme = "README.md"
repository = "https://github.com/harehare/mq-http"
version = "0.1.1"

[dependencies]
axum = "0.8.8"
futures-util = "0.3"
axum-server = {version = "0.7", features = ["tls-rustls"]}
clap = {version = "4.6.0", features = ["derive", "env"]}
miette = "7.6.0"
mq-lang = {version = "0.5.27", features = ["cst", "sync", "ast-json"]}
mq-markdown = {version = "0.5.27", features = ["html-to-markdown", "json"]}
notify = "6"
opentelemetry = "0.31"
opentelemetry-otlp = {version = "0.31", features = ["http-proto", "reqwest-client"]}
opentelemetry_sdk = {version = "0.31", features = ["rt-tokio"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = {version = "1.51.0", features = ["full"]}
toml = "1.1"
tower-http = {version = "0.6.8", features = ["limit", "trace", "cors", "compression-full", "request-id"]}
base64 = "0.22"
tracing = {version = "0.1.44"}
tracing-opentelemetry = "0.32"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
yaml-rust2 = "0.11.0"

[dev-dependencies]
http-body-util = "0.1"
rstest = "0.25"

[[bin]]
name = "mq-http"
path = "src/main.rs"

